@@ -82,6 +82,8 @@ typedef QColor color;
 #if defined QT_VERSION && (QT_VERSION >= 0x040000)
 #include <QtCore/QSet>
 typedef QSet<QString> Strings;
+#else
+typedef QStringList Strings;
 #endif
 
 #else
@@ -890,7 +892,6 @@ typedef struct
 #endif
 #if !defined __cplusplus || defined QTC_CONFIG_DIALOG
                      mapKdeIcons,
-                     gtkMenuStripe,
 #endif
 #if defined QTC_CONFIG_DIALOG || (defined QT_VERSION && (QT_VERSION >= 0x040000)) || !defined __cplusplus
                      gtkButtonOrder,
@@ -1018,9 +1019,10 @@ typedef struct
 #if !defined __cplusplus || (defined QT_VERSION && (QT_VERSION >= 0x040000))
     /* NOTE: If add any more settings here, need to alter copyOpts/freeOpts/defaultSettings in config_file.c */
     Strings          noBgndGradientApps,
-                     noBgndImageApps,
-                     noDlgFixApps;
+                     noBgndImageApps;
 #endif
+    Strings          noDlgFixApps,
+                     noMenuStripeApps;
 #if defined QT_VERSION && (QT_VERSION >= 0x040000)
     Strings          menubarApps,
                      useQtFileDialogApps;
